# hydraulic-erosion-gpu

./: Cargo.toml  README.md
assets/shaders/: erosion.wgsl  terrain_material.wgsl
src/: main.rs  terrain.rs
src/terrain/: config.rs  erosion.rs  material.rs  mod.rs
