[package]
name = "hydraulic-erosion-gpu"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.11.0"
bevy_panorbit_camera = "0.7.0"
bitflags = "2.3.3"
noise = "0.8.2"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

